# wzorce

./: .gitignore
cw/: .gitignore  CMakeLists.txt
cw/3_1/: Counter.cpp  Counter.h  FileLogger.cpp  FileLogger.h  Formatter.cpp  Formatter.h  LoggerAdapter.cpp  LoggerAdapter.h  LoggerFacade.cpp  LoggerFacade.h  ScreenLogger.cpp  ScreenLogger.h  Timestamper.cpp  Timestamper.h  main.cpp  newLogger.cpp  newLogger.h
cw/3_2/: Hash.cpp  Hash.h  MD5Hash.cpp  MD5Hash.h  Password.cpp  Password.h  SHA256Hash.cpp  SHA256Hash.h  main.cpp  md5.cpp  md5.h
cw/3_3/: main.cpp
cw/4_2/: main.cpp
cw/5_1/: AntiTankGrenade.cpp  AntiTankGrenade.h  Grenade.cpp  Grenade.h  Launcher.cpp  Launcher.h  SmokeGrenade.cpp  SmokeGrenade.h  main.cpp
java/src/pl/edu/uj/: Builder.java  ChefRecipe.java  ChefRecipeBuilder.java  Director.java  InventoryItem.java  InventoryItemBuilder.java  Main.java  (+3 more)
java/src/zadanie5_2/: Builder.java  ChefRecipe.java  ChefRecipeBuilder.java  Director.java  InventoryItem.java  InventoryItemBuilder.java  Main.java  Presentable.java
java/src/zadanie6/: Decorator.java  DelayDecorator.java  FactorizationTask.java  JobManager.java  Main.java  SysInfoDecorator.java  Task.java  TimeDecorator.java
java/src/zadanieChainOfResponsibility/: Clerk.java  Client.java  Director.java  Main.java  Request.java  RequestHandler.java
java/src/zadanieKompozyt/: CompositeSensor.java  Main.java  Monitor.java  Sensor.java  SensorStatus.java  SensorStrategy.java
java/src/zadanieKompozyt/sensors/: TemperatureSensor.java  VoltageSensor.java
java/src/zadanieKompozyt/strategies/: CommonSenseSensorStrategy.java  OptimisticSensorStrategy.java  StrictSensorStrategy.java
java/src/zadanieMediator/: Customer.java  Main.java  Mediator.java  Taxi.java  TaxiMediator.java  TrafficParticipant.java
java/src/zadanieMost/: ASCIIDrawApiFactory.java  AbstractDrawApiFactory.java  Circle.java  DrawAPI.java  DrawASCII.java  DrawSwing.java  Main.java  Rectangle.java  Shape.java  SwingDrawApiFactory.java
java/src/zadanieObserwator/: Auction.java  FiniteNumberAuctioneer.java  JournalistObserver.java  Main.java  Observable.java  Observer.java  ProbabilisticAuctioneer.java  SuperstitiousAuctioneer.java
java/src/zadanieProxy/: ConcreteImage.java  FullWidthStrategy.java  Image.java  ImageProxy.java  Main.java  PackingStrategy.java  PageAssembler.java
java/src/zadaniePyłek/: Letter.java  LetterFactory.java
java/src/zadanieVisitor/: Animal.java  Cat.java  Cleaner.java  Dog.java  Feeder.java  Hotel.java  HotelStaff.java  Main.java  Parrot.java  Vet.java  Walker.java
